--- a/cargo.toml
+++ b/cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 [dependencies]
 # Add your project's dependencies here
 sha3 = "0.10.5"
+bincode = "1.3.3" 
+hex = "0.4.3"
+serde = { version = "1.0.157",  features = ["derive"] }
+serde_derive = "1.0.157"
 
 [dev-dependencies]
 # Add development dependencies here, if any
